--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,4 +2,6 @@ server.ssl.key-store=payload/cert/prod/springboot.p12
 server.ssl.key-store-password=password
 server.ssl.key-alias=springboot
 server.ssl.key-password=password
+spring.security.user.name=username
+spring.security.user.password=password
 server.port=8443
