add contact mail

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,10 @@
+# SSL
 server.ssl.key-store=payload/cert/dev/springboot.p12
 server.ssl.key-store-password=password
 server.ssl.key-alias=springboot
 server.ssl.key-password=password
 server.port=8443
+# Mail
+spring.mail.host=
+spring.mail.username=
+spring.mail.password=
