--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,4 @@
+# SSL
 server.ssl.key-store=payload/cert/prod/springboot.p12
 server.ssl.key-store-password=password
 server.ssl.key-alias=springboot
@@ -5,3 +6,7 @@ server.ssl.key-password=password
 spring.security.user.name=username
 spring.security.user.password=password
 server.port=8443
+# Mail
+spring.mail.host=
+spring.mail.username=
+spring.mail.password=
