--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,21 @@
 spring.profiles.active=dev
-server.ssl.enabled=true
+# Upload
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=11MB
+# SSL
+server.ssl.enabled=true
 server.ssl.key-store-type=pkcs12
+# Error
 server.error.path=/error
+# Mail
+spring.mail.test-connection=false
+spring.mail.default-encoding=UTF-8
+spring.mail.port=587
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.host=
+spring.mail.username=
+spring.mail.password=
