add http port support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.profiles.active=dev
+# Ports
+server.port=8443
+server.http.port=8080
 # Upload
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
