--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,9 @@ out/
 ### VS Code ###
 .vscode/
 
+### Security
+src/main/resources/application-prod.properties
+payload/cert/prod/
 
 ### Project ###
 output/
