--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=dev
+spring.profiles.active=prod
 # Ports
 server.port=8443
 server.http.port=8080
@@ -7,7 +7,7 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=11MB
 # SSL
-server.ssl.enabled=true
+server.ssl.enabled=false
 server.ssl.key-store-type=pkcs12
 # Error
 server.error.path=/error
