--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=11MB
 # SSL
-server.ssl.enabled=false
+server.ssl.enabled=true
 server.ssl.key-store-type=pkcs12
 # Error
 server.error.path=/error
